k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-svc
  ports:
  - port: 80
    targetPort: 8080
